--- a/BlockDesigns/CIAA_master/ui/bd_9437895b.ui
+++ b/BlockDesigns/CIAA_master/ui/bd_9437895b.ui
@@ -2,44 +2,44 @@
    "ExpandedHierarchyInLayout":"",
    "guistr":"# # String gsaved with Nlview 7.0.19  2019-03-26 bk=1.5019 VDI=41 GEI=35 GUI=JA:9.0 TLS
 #  -string -flagsOSRD
-preplace port adc_sclk_0 -pg 1 -lvl 4 -x 1510 -y 90 -defaultsOSRD
-preplace port adc_sdio_0 -pg 1 -lvl 4 -x 1510 -y 150 -defaultsOSRD
-preplace port adc_ss1_0 -pg 1 -lvl 4 -x 1510 -y 110 -defaultsOSRD
-preplace port adc_ss2_0 -pg 1 -lvl 4 -x 1510 -y 130 -defaultsOSRD
-preplace port hdmi_en_o_0 -pg 1 -lvl 4 -x 1510 -y 270 -defaultsOSRD
-preplace port led_green_o_0 -pg 1 -lvl 4 -x 1510 -y 250 -defaultsOSRD
-preplace port led_red_o_0 -pg 1 -lvl 4 -x 1510 -y 230 -defaultsOSRD
-preplace port tp8_o_0 -pg 1 -lvl 4 -x 1510 -y 310 -defaultsOSRD
-preplace port vadj_en_o_0 -pg 1 -lvl 4 -x 1510 -y 210 -defaultsOSRD
-preplace inst SPI_3wire_0 -pg 1 -lvl 3 -x 1240 -y 100 -defaultsOSRD
-preplace inst axi_interconnect_0 -pg 1 -lvl 2 -x 710 -y 310 -defaultsOSRD
-preplace inst pin_control_0 -pg 1 -lvl 3 -x 1240 -y 510 -defaultsOSRD
-preplace inst proc_sys_reset_0 -pg 1 -lvl 1 -x 230 -y 530 -defaultsOSRD
-preplace inst processing_system7_0 -pg 1 -lvl 1 -x 230 -y 200 -defaultsOSRD
-preplace netloc ACLK_1 1 0 3 -70 410 490 490 N
-preplace netloc Net1 1 3 1 1490 140n
-preplace netloc SPI_3wire_0_adc_sclk 1 3 1 1490 80n
-preplace netloc SPI_3wire_0_adc_ss1 1 3 1 1490 100n
-preplace netloc SPI_3wire_0_adc_ss2 1 3 1 1490 120n
-preplace netloc SPI_3wire_0_proc_miso 1 1 3 460J 190 860 200 1440
-preplace netloc pin_control_0_hdmi_en_o 1 3 1 1480 270n
-preplace netloc pin_control_0_led_green_o 1 3 1 1470 250n
-preplace netloc pin_control_0_led_red_o 1 3 1 1460 230n
-preplace netloc pin_control_0_spi_tristate_o 1 2 2 870 210 1440
-preplace netloc pin_control_0_tp8_o 1 3 1 1490 310n
-preplace netloc pin_control_0_vadj_en_o 1 3 1 1450 210n
-preplace netloc proc_sys_reset_0_interconnect_aresetn 1 1 2 500 510 N
-preplace netloc processing_system7_0_FCLK_RESET0_N 1 0 2 -60 420 460
-preplace netloc processing_system7_0_SPI0_MOSI_O 1 1 2 440J 120 N
-preplace netloc processing_system7_0_SPI0_SCLK_O 1 1 2 430J 60 N
-preplace netloc processing_system7_0_SPI0_SS1_O 1 1 2 450J 80 N
-preplace netloc processing_system7_0_SPI0_SS2_O 1 1 2 470J 180 860
-preplace netloc axi_interconnect_0_M00_AXI 1 2 1 870 310n
-preplace netloc processing_system7_0_M_AXI_GP0 1 1 1 480 250n
-levelinfo -pg 1 -90 230 710 1240 1510
-pagesize -pg 1 -db -bbox -sgen -90 -700 1670 870
+preplace port FIXED_IO -pg 1 -lvl 5 -x 1460 -y 60 -defaultsOSRD
+preplace port adc_sclk_o -pg 1 -lvl 5 -x 1460 -y 160 -defaultsOSRD
+preplace port adc_sdio_io -pg 1 -lvl 5 -x 1460 -y 220 -defaultsOSRD
+preplace port adc_ss1_o -pg 1 -lvl 5 -x 1460 -y 180 -defaultsOSRD
+preplace port adc_ss2_o -pg 1 -lvl 5 -x 1460 -y 200 -defaultsOSRD
+preplace port hdmi_en_o -pg 1 -lvl 5 -x 1460 -y 390 -defaultsOSRD
+preplace port led_green_o -pg 1 -lvl 5 -x 1460 -y 370 -defaultsOSRD
+preplace port led_red_o -pg 1 -lvl 5 -x 1460 -y 350 -defaultsOSRD
+preplace port tp8_o -pg 1 -lvl 5 -x 1460 -y 430 -defaultsOSRD
+preplace port vadj_en_o -pg 1 -lvl 5 -x 1460 -y 330 -defaultsOSRD
+preplace inst SPI_3wire_0 -pg 1 -lvl 4 -x 1310 -y 180 -defaultsOSRD
+preplace inst axi_interconnect_0 -pg 1 -lvl 2 -x 610 -y 320 -defaultsOSRD
+preplace inst pin_control_0 -pg 1 -lvl 3 -x 970 -y 360 -defaultsOSRD
+preplace inst proc_sys_reset_0 -pg 1 -lvl 1 -x 230 -y 450 -defaultsOSRD
+preplace inst processing_system7_0 -pg 1 -lvl 1 -x 230 -y 170 -defaultsOSRD
+preplace netloc ACLK_1 1 0 3 20 340 440 440 760
+preplace netloc Net 1 4 1 NJ 220
+preplace netloc SPI_3wire_0_adc_sclk 1 4 1 NJ 160
+preplace netloc SPI_3wire_0_adc_ss1 1 4 1 NJ 180
+preplace netloc SPI_3wire_0_adc_ss2 1 4 1 NJ 200
+preplace netloc SPI_3wire_0_proc_miso 1 1 4 450J 80 NJ 80 NJ 80 1440
+preplace netloc pin_control_0_spi_tristate_o 1 3 1 1180 220n
+preplace netloc pin_control_1_hdmi_en_o 1 3 2 NJ 390 NJ
+preplace netloc pin_control_1_led_green_o 1 3 2 NJ 370 NJ
+preplace netloc pin_control_1_led_red_o 1 3 2 NJ 350 NJ
+preplace netloc pin_control_1_tp8_o 1 3 2 NJ 430 NJ
+preplace netloc pin_control_1_vadj_en_o 1 3 2 NJ 330 NJ
+preplace netloc proc_sys_reset_0_interconnect_aresetn 1 1 2 450 450 770J
+preplace netloc processing_system7_0_FCLK_RESET0_N 1 0 2 30 350 430
+preplace netloc processing_system7_0_SPI0_MOSI_O 1 1 3 NJ 120 NJ 120 1170
+preplace netloc processing_system7_0_SPI0_SCLK_O 1 1 3 NJ 100 NJ 100 1180
+preplace netloc processing_system7_0_SPI0_SS1_O 1 1 3 NJ 160 NJ 160 N
+preplace netloc processing_system7_0_SPI0_SS2_O 1 1 3 NJ 180 NJ 180 N
+preplace netloc axi_interconnect_0_M00_AXI 1 2 1 N 320
+preplace netloc processing_system7_0_FIXED_IO 1 1 4 NJ 60 NJ 60 NJ 60 NJ
+preplace netloc processing_system7_0_M_AXI_GP0 1 1 1 450 220n
+levelinfo -pg 1 0 230 610 970 1310 1460
+pagesize -pg 1 -db -bbox -sgen 0 0 1600 550
 "
 }
-{
-   "da_clkrst_cnt":"1"
-}
+
